Fix: Reduce navbar logo to 32px on mobile

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -344,7 +344,7 @@
   }
 
   .logo-image {
-    height: 40px;
+    height: 32px;
   }
 
   .nav-logo {
@@ -391,7 +391,7 @@
   }
 
   .logo-image {
-    height: 36px;
+    height: 30px;
   }
 
   .nav-link {
